// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated redirect rules snapshot > production .htaccess is unchanged 1`] = `
"### AUTOGENERATED DO NOT EDIT
ErrorDocument 404 /charts/404.html

# add MIME types for serving example files
AddType text/javascript mjs ts jsx

# Apache has no built-in .webp type, so without this the images are served with no Content-Type.
AddType image/webp .webp

# serve the per-page LLM markdown files as markdown
AddType text/markdown md
# ...as UTF-8, so glyphs like ✓/✗ in generated tables aren't mojibaked by a
# Latin-1 fallback (the .md endpoint sets this charset; static hosting must too).
AddCharset utf-8 .md

# Content-Security-Policy — path-scoped. Charts is served from /charts on www.ag-grid.com
# and inherits the grid root CSP, so this block overrides it for charts pages (see
# getCspHtaccessBlock). Ordinary pages get the tightened policy (no 'unsafe-eval'); the
# <If> override re-allows it for example-runner documents. The trial-form origin is
# env-split, so the policy is generated per environment.
# Override the CSP inherited from the grid root for /charts pages.
Header always unset Content-Security-Policy
Header always unset Content-Security-Policy-Report-Only
Header always set Content-Security-Policy "default-src 'self'; script-src 'self' https://*.ag-grid.com https://plausible.io https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://esm.sh https://js.zi-scripts.com https://*.zoominfo.com https://snap.licdn.com https://googleads.g.doubleclick.net https://www.google.com https://www.gstatic.com https://www.youtube.com https://cdn.cookielaw.org https://app.enzuzo.com blob: 'wasm-unsafe-eval' 'sha256-5yA1hhuz+tEuYcMxZ8ZGwNFlGOTnPuOk3MMRs7fYXmY=' 'sha256-yyPoC+PtF+Rve9JwzJ4PTIiap268jewQfmi4/JViA6I=' 'sha256-2FkRaRTcR5gCsv4n2zqqqLpAuXDH81zr4eNak8Aw5QA=' 'sha256-V9qR5YoG9UXRYIHiPULjYjKYPy3t6rsOFgm0VUI5TzE=' 'sha256-QzWFZi+FLIx23tnm9SBU4aEgx4x8DsuASP07mfqol/c=' 'sha256-eIXWvAmxkr251LJZkjniEK5LcPF3NkapbJepohwYRIc=' 'sha256-Q2BPg90ZMplYY+FSdApNErhpWafg2hcRRbndmvxuL/Q=' 'sha256-BF0290pkb3jxQsE7z00xR8Imp8X34FLC88L0lkMnrGw=' 'sha256-Ya0pUYrC7nM5Cn/056TyVuEiz6dFGrzmkWzgON0pF0U=' 'sha256-41l+jvtOjBgKy9345IStB4j1gGPGFMVXADMHn1Acs6E=' 'sha256-NSYHvOQXo5WNxDt0/+l9AbSTx6N4CkkrbuSSa6ERhlo=' 'sha256-UZ79CQlmQa9u4xp1a60kP2//w3o9IvBsC2tdqv57moc=' 'sha256-7f34QP24yF/YC+G6zSHRCBZrBez6xFf6GbcGIXkZ4K0=' 'sha256-7slCn/usH14D/QjSBhHPAkSInIZY56XqT8LTtYE71U8=' 'sha256-D3cdipua6lhS2IQ0W0AlSNVVsS+2b/sXycSE8m8PkxY=' 'sha256-nC2/ZWBpMyJEdVw5YxKBKxSMNwMN/lOAPrHk4RcIBbc=' 'sha256-mEEBV2lFpiAmDNE5KUyh96GfbHxzY6fQyivqgFN8qok=' 'sha256-I3QGV+JbPLDPH/LSfCc18uFddKqpiYEYRrrBUdnCC2Q='; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com data:; img-src 'self' data: blob: https:; connect-src 'self' data: https://*.ag-grid.com https://plausible.io https://*.algolia.net https://*.algolianet.com https://*.google-analytics.com https://*.analytics.google.com https://analytics.google.com https://stats.g.doubleclick.net https://www.googletagmanager.com https://cdn.jsdelivr.net https://esm.sh https://js.zi-scripts.com https://*.zoominfo.com https://px.ads.linkedin.com https://www.google.com https://www.googleadservices.com https://pagead2.googlesyndication.com https://ad.doubleclick.net https://cdn.cookielaw.org https://*.onetrust.com https://app.enzuzo.com https://gvl.enzuzo.com https://hook.eu2.make.com https://ingress.eu-west-1.aws.dash0.com https://us-central1-aggrid-ecommerce.cloudfunctions.net; frame-src 'self' data: https://www.googletagmanager.com https://www.youtube.com https://www.google.com; media-src 'self' data: blob: https:; worker-src 'self' blob:; object-src 'none'; base-uri 'self'; form-action 'self' https://us-central1-aggrid-ecommerce.cloudfunctions.net https://webto.salesforce.com https://codesandbox.io https://plnkr.co https://ag-grid.us11.list-manage.com; frame-ancestors 'self' https://*.ag-grid.com"

# Example-runner documents and archived doc versions additionally need 'unsafe-eval'
# (the Angular JIT compiler and the Plunker transpiler compile in the browser;
# archived versions additionally eval-load modules with SystemJS).
# <If> sections merge after all other configuration, so this unset+set replaces the
# header set above for matching requests.
<If "%{REQUEST_URI} =~ m#/(examples/[^/?]|archive/)#">
    Header always unset Content-Security-Policy
    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' https://*.ag-grid.com https://plausible.io https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://esm.sh https://js.zi-scripts.com https://*.zoominfo.com https://snap.licdn.com https://googleads.g.doubleclick.net https://www.google.com https://www.gstatic.com https://www.youtube.com https://cdn.cookielaw.org https://app.enzuzo.com blob: 'wasm-unsafe-eval' 'unsafe-eval' 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com data:; img-src 'self' data: blob: https:; connect-src 'self' data: https://*.ag-grid.com https://plausible.io https://*.algolia.net https://*.algolianet.com https://*.google-analytics.com https://*.analytics.google.com https://analytics.google.com https://stats.g.doubleclick.net https://www.googletagmanager.com https://cdn.jsdelivr.net https://esm.sh https://js.zi-scripts.com https://*.zoominfo.com https://px.ads.linkedin.com https://www.google.com https://www.googleadservices.com https://pagead2.googlesyndication.com https://ad.doubleclick.net https://cdn.cookielaw.org https://*.onetrust.com https://app.enzuzo.com https://gvl.enzuzo.com https://hook.eu2.make.com https://ingress.eu-west-1.aws.dash0.com https://us-central1-aggrid-ecommerce.cloudfunctions.net; frame-src 'self' data: https://www.googletagmanager.com https://www.youtube.com https://www.google.com; media-src 'self' data: blob: https:; worker-src 'self' blob:; object-src 'none'; base-uri 'self'; form-action 'self' https://us-central1-aggrid-ecommerce.cloudfunctions.net https://webto.salesforce.com https://codesandbox.io https://plnkr.co https://ag-grid.us11.list-manage.com; frame-ancestors 'self' https://*.ag-grid.com"
</If>

<IfModule mod_rewrite.c>
    RewriteEngine On

    RewriteRule "^javascript/bullet-series/?$" "https://www.ag-grid.com/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^angular/bullet-series/?$" "https://www.ag-grid.com/charts/angular/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^react/bullet-series/?$" "https://www.ag-grid.com/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^vue/bullet-series/?$" "https://www.ag-grid.com/charts/vue/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^javascript/fonts/?$" "https://www.ag-grid.com/charts/javascript/text/" [R=301,L]
    RewriteRule "^angular/fonts/?$" "https://www.ag-grid.com/charts/angular/text/" [R=301,L]
    RewriteRule "^react/fonts/?$" "https://www.ag-grid.com/charts/react/text/" [R=301,L]
    RewriteRule "^vue/fonts/?$" "https://www.ag-grid.com/charts/vue/text/" [R=301,L]
    RewriteRule "^javascript/?$" "https://www.ag-grid.com/charts/javascript/quick-start/" [R=301,L]
    RewriteRule "^javascript/toolbar/?$" "https://www.ag-grid.com/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react/toolbar/?$" "https://www.ag-grid.com/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react/line/?$" "https://www.ag-grid.com/charts/react/line-series/" [R=301,L]
    RewriteRule "^sitemap\\.xml/?$" "https://www.ag-grid.com/charts/sitemap-0.xml" [R=301,L]
    RewriteRule "^archive/?$" "https://www.ag-grid.com/charts/documentation-archive/" [R=301,L]
    RewriteRule "^privacy(/.*)?$" - [G]
    RewriteRule "^javascript-charts/javascript/bullet-series/?$" "https://www.ag-grid.com/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^javascript-charts/javascript/fonts/?$" "https://www.ag-grid.com/charts/javascript/text/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/toolbar/?$" "https://www.ag-grid.com/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/series(/.*)?$" "https://www.ag-grid.com/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/axes(/.*)?$" "https://www.ag-grid.com/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/javascript/$1" [R=301,L]
    RewriteRule "^javascript-charts/javascript/(.+?)/?$" "https://www.ag-grid.com/charts/javascript/$1/" [R=301,L]
    RewriteRule "^angular-charts/angular/bullet-series/?$" "https://www.ag-grid.com/charts/angular/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^angular-charts/angular/fonts/?$" "https://www.ag-grid.com/charts/angular/text/" [R=301,L]
    RewriteRule "^angular-charts/angular/series(/.*)?$" "https://www.ag-grid.com/charts/angular/bar-series/" [R=301,L]
    RewriteRule "^angular-charts/angular/axes(/.*)?$" "https://www.ag-grid.com/charts/angular/axes-configuration/" [R=301,L]
    RewriteRule "^angular-charts/angular/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/angular/$1" [R=301,L]
    RewriteRule "^angular-charts/angular/(.+?)/?$" "https://www.ag-grid.com/charts/angular/$1/" [R=301,L]
    RewriteRule "^react-charts/react/bullet-series/?$" "https://www.ag-grid.com/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^react-charts/react/fonts/?$" "https://www.ag-grid.com/charts/react/text/" [R=301,L]
    RewriteRule "^react-charts/react/toolbar/?$" "https://www.ag-grid.com/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react-charts/react/line/?$" "https://www.ag-grid.com/charts/react/line-series/" [R=301,L]
    RewriteRule "^react-charts/react/series(/.*)?$" "https://www.ag-grid.com/charts/react/bar-series/" [R=301,L]
    RewriteRule "^react-charts/react/axes(/.*)?$" "https://www.ag-grid.com/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^react-charts/react/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/react/$1" [R=301,L]
    RewriteRule "^react-charts/react/(.+?)/?$" "https://www.ag-grid.com/charts/react/$1/" [R=301,L]
    RewriteRule "^vue-charts/vue/bullet-series/?$" "https://www.ag-grid.com/charts/vue/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^vue-charts/vue/fonts/?$" "https://www.ag-grid.com/charts/vue/text/" [R=301,L]
    RewriteRule "^vue-charts/vue/series(/.*)?$" "https://www.ag-grid.com/charts/vue/bar-series/" [R=301,L]
    RewriteRule "^vue-charts/vue/axes(/.*)?$" "https://www.ag-grid.com/charts/vue/axes-configuration/" [R=301,L]
    RewriteRule "^vue-charts/vue/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/vue/$1" [R=301,L]
    RewriteRule "^vue-charts/vue/(.+?)/?$" "https://www.ag-grid.com/charts/vue/$1/" [R=301,L]
    RewriteRule "^enterprise-charts/react/bullet-series/?$" "https://www.ag-grid.com/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^enterprise-charts/react/fonts/?$" "https://www.ag-grid.com/charts/react/text/" [R=301,L]
    RewriteRule "^enterprise-charts/react/toolbar/?$" "https://www.ag-grid.com/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^enterprise-charts/react/line/?$" "https://www.ag-grid.com/charts/react/line-series/" [R=301,L]
    RewriteRule "^enterprise-charts/react/series(/.*)?$" "https://www.ag-grid.com/charts/react/bar-series/" [R=301,L]
    RewriteRule "^enterprise-charts/react/axes(/.*)?$" "https://www.ag-grid.com/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^enterprise-charts/react/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/react/$1" [R=301,L]
    RewriteRule "^enterprise-charts/react/(.+?)/?$" "https://www.ag-grid.com/charts/react/$1/" [R=301,L]
    RewriteRule "^[a-z]+-charts/gallery(/.*)?$" "https://www.ag-grid.com/charts/gallery/" [R=301,L]
    RewriteRule "^[a-z]+-charts/options(/.*)?$" "https://www.ag-grid.com/charts/options/" [R=301,L]
    RewriteRule "^enterprise-charts/(?!index\\.html$).+$" "https://www.ag-grid.com/charts/enterprise-charts/" [R=301,L]
    RewriteRule "^(?:core|side)/?$" "https://www.ag-grid.com/charts/javascript/quick-start/" [R=301,L]
    RewriteRule "^core/bullet-series/?$" "https://www.ag-grid.com/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^core/fonts/?$" "https://www.ag-grid.com/charts/javascript/text/" [R=301,L]
    RewriteRule "^core/toolbar/?$" "https://www.ag-grid.com/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^core/series(/.*)?$" "https://www.ag-grid.com/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^core/axes(/.*)?$" "https://www.ag-grid.com/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^core/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/javascript/$1" [R=301,L]
    RewriteRule "^core/(.+?)/?$" "https://www.ag-grid.com/charts/javascript/$1/" [R=301,L]
    RewriteRule "^side/bullet-series/?$" "https://www.ag-grid.com/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^side/fonts/?$" "https://www.ag-grid.com/charts/javascript/text/" [R=301,L]
    RewriteRule "^side/toolbar/?$" "https://www.ag-grid.com/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^side/series(/.*)?$" "https://www.ag-grid.com/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^side/axes(/.*)?$" "https://www.ag-grid.com/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^side/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/javascript/$1" [R=301,L]
    RewriteRule "^side/(.+?)/?$" "https://www.ag-grid.com/charts/javascript/$1/" [R=301,L]
    RewriteRule "^server-side-rendering(/.*)?$" "https://www.ag-grid.com/charts/javascript/server-side-rendering/" [R=301,L]
    RewriteRule "^react/series(/.*)?$" "https://www.ag-grid.com/charts/react/bar-series/" [R=301,L]
    RewriteRule "^angular/series(/.*)?$" "https://www.ag-grid.com/charts/angular/bar-series/" [R=301,L]
    RewriteRule "^vue/series(/.*)?$" "https://www.ag-grid.com/charts/vue/bar-series/" [R=301,L]
    RewriteRule "^javascript/series(/.*)?$" "https://www.ag-grid.com/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^react/axes(/.*)?$" "https://www.ag-grid.com/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^angular/axes(/.*)?$" "https://www.ag-grid.com/charts/angular/axes-configuration/" [R=301,L]
    RewriteRule "^vue/axes(/.*)?$" "https://www.ag-grid.com/charts/vue/axes-configuration/" [R=301,L]
    RewriteRule "^javascript/axes(/.*)?$" "https://www.ag-grid.com/charts/javascript/axes-configuration/" [R=301,L]

    # Without this, mod_rewrite skips the base directory's own slash-less URL and leaves it to
    # mod_dir, whose slash redirect stays on the requesting host - a second hop from any other host.
    RewriteOptions AllowNoSlash

    # Every slash-less path goes straight to its slashed canonical URL, as on the grid root, rather
    # than via mod_dir's slash redirect on the requesting host. That holds whether or not the path
    # is a page: one that is not then 404s at the slashed URL. The exception is a path whose last
    # segment has a dot, taken for a file unless it is a real directory (an archive version such as
    # 14.2.0).
    RewriteCond %{HTTP_HOST} ^www\\.ag-grid\\.com$ [NC,OR]
    RewriteCond %{HTTP_HOST} ^(?:ag-grid\\.com|(?:blog|angulargrid|angular-grid|javascript-grid|react-grid)\\.ag-grid\\.com|(?:www\\.)?angulargrid\\.com)$ [NC]
    RewriteCond %{REQUEST_URI} /+[^.]+$ [OR]
    RewriteCond %{REQUEST_FILENAME} -d
    RewriteCond %{REQUEST_URI} [^/]$
    # Not below an archive: one deployed without rewrite rules of its own runs these instead, and
    # its own redirects must see the URL as requested.
    RewriteCond %{REQUEST_URI} !^/charts/archive/
    RewriteRule ^ https://www.ag-grid.com%{REQUEST_URI}/ [R=301,L]

    # Canonical host is www.ag-grid.com; no other host may serve pages directly.
    RewriteCond %{HTTP_HOST} ^(?:ag-grid\\.com|(?:blog|angulargrid|angular-grid|javascript-grid|react-grid)\\.ag-grid\\.com|(?:www\\.)?angulargrid\\.com)$ [NC]
    RewriteRule ^ https://www.ag-grid.com%{REQUEST_URI} [R=301,L]
</IfModule>

<IfModule mod_rewrite.c>
    RewriteEngine On

    RewriteCond %{HTTP_ACCEPT} text/markdown
    RewriteCond %{REQUEST_URI} ^/(charts/(?:(?:react|angular|vue|javascript)/[^/.]+|(?:react|angular|vue)|changelog|contact|documentation-archive|license-pricing|pipeline|roadmap|sitemap|whats-new|community(?:/(?:beyond-the-prompt|events|media|showcase|tools-extensions))?|session/[^/.]+|examples(?:-[^/.]+)?|gallery(?:/[^/.]+)?|(?:angular|enterprise|javascript|react|vue)-charts|options(?:/(?:axes|series|initialState/annotations|navigator/miniChart/series)/[^/.]+)?|themes-api(?:/overrides/[^/.]+)?))/?$
    RewriteCond %{DOCUMENT_ROOT}/%1.md -f
    RewriteRule ^ /%1.md [L]

    # The homepage twin (/charts/ -> /charts/index.md). Handled separately because the
    # site root has no path segment to capture in %1; the pattern matches only the base root.
    RewriteCond %{HTTP_ACCEPT} text/markdown
    RewriteCond %{REQUEST_URI} ^/charts/?$
    RewriteCond %{DOCUMENT_ROOT}/charts/index.md -f
    RewriteRule ^ /charts/index.md [L]
</IfModule>

# Docs pages content-negotiate on Accept (see the markdown rewrite), so shared caches must
# key on it. Scoped to the negotiated paths (incl. the homepage) so the rest of the site keeps
# its default.
<If "%{REQUEST_URI} =~ m#^/charts/(?:(?:react|angular|vue|javascript)/[^/.]+|(?:react|angular|vue)|changelog|contact|documentation-archive|license-pricing|pipeline|roadmap|sitemap|whats-new|community(?:/(?:beyond-the-prompt|events|media|showcase|tools-extensions))?|session/[^/.]+|examples(?:-[^/.]+)?|gallery(?:/[^/.]+)?|(?:angular|enterprise|javascript|react|vue)-charts|options(?:/(?:axes|series|initialState/annotations|navigator/miniChart/series)/[^/.]+)?|themes-api(?:/overrides/[^/.]+)?)(?:/|/index\\.html)?$# || %{REQUEST_URI} =~ m#^/charts(?:/|/index\\.html)?$#">
    Header append Vary Accept
</If>

Options -Indexes
"
`;

exports[`generated redirect rules snapshot > redirect rules output is unchanged 1`] = `
"<IfModule mod_rewrite.c>
    RewriteEngine On

    RewriteRule "^javascript/bullet-series/?$" "https://www.ag-grid.com/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^angular/bullet-series/?$" "https://www.ag-grid.com/charts/angular/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^react/bullet-series/?$" "https://www.ag-grid.com/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^vue/bullet-series/?$" "https://www.ag-grid.com/charts/vue/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^javascript/fonts/?$" "https://www.ag-grid.com/charts/javascript/text/" [R=301,L]
    RewriteRule "^angular/fonts/?$" "https://www.ag-grid.com/charts/angular/text/" [R=301,L]
    RewriteRule "^react/fonts/?$" "https://www.ag-grid.com/charts/react/text/" [R=301,L]
    RewriteRule "^vue/fonts/?$" "https://www.ag-grid.com/charts/vue/text/" [R=301,L]
    RewriteRule "^javascript/?$" "https://www.ag-grid.com/charts/javascript/quick-start/" [R=301,L]
    RewriteRule "^javascript/toolbar/?$" "https://www.ag-grid.com/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react/toolbar/?$" "https://www.ag-grid.com/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react/line/?$" "https://www.ag-grid.com/charts/react/line-series/" [R=301,L]
    RewriteRule "^sitemap\\.xml/?$" "https://www.ag-grid.com/charts/sitemap-0.xml" [R=301,L]
    RewriteRule "^archive/?$" "https://www.ag-grid.com/charts/documentation-archive/" [R=301,L]
    RewriteRule "^privacy(/.*)?$" - [G]
    RewriteRule "^javascript-charts/javascript/bullet-series/?$" "https://www.ag-grid.com/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^javascript-charts/javascript/fonts/?$" "https://www.ag-grid.com/charts/javascript/text/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/toolbar/?$" "https://www.ag-grid.com/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/series(/.*)?$" "https://www.ag-grid.com/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/axes(/.*)?$" "https://www.ag-grid.com/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/javascript/$1" [R=301,L]
    RewriteRule "^javascript-charts/javascript/(.+?)/?$" "https://www.ag-grid.com/charts/javascript/$1/" [R=301,L]
    RewriteRule "^angular-charts/angular/bullet-series/?$" "https://www.ag-grid.com/charts/angular/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^angular-charts/angular/fonts/?$" "https://www.ag-grid.com/charts/angular/text/" [R=301,L]
    RewriteRule "^angular-charts/angular/series(/.*)?$" "https://www.ag-grid.com/charts/angular/bar-series/" [R=301,L]
    RewriteRule "^angular-charts/angular/axes(/.*)?$" "https://www.ag-grid.com/charts/angular/axes-configuration/" [R=301,L]
    RewriteRule "^angular-charts/angular/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/angular/$1" [R=301,L]
    RewriteRule "^angular-charts/angular/(.+?)/?$" "https://www.ag-grid.com/charts/angular/$1/" [R=301,L]
    RewriteRule "^react-charts/react/bullet-series/?$" "https://www.ag-grid.com/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^react-charts/react/fonts/?$" "https://www.ag-grid.com/charts/react/text/" [R=301,L]
    RewriteRule "^react-charts/react/toolbar/?$" "https://www.ag-grid.com/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react-charts/react/line/?$" "https://www.ag-grid.com/charts/react/line-series/" [R=301,L]
    RewriteRule "^react-charts/react/series(/.*)?$" "https://www.ag-grid.com/charts/react/bar-series/" [R=301,L]
    RewriteRule "^react-charts/react/axes(/.*)?$" "https://www.ag-grid.com/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^react-charts/react/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/react/$1" [R=301,L]
    RewriteRule "^react-charts/react/(.+?)/?$" "https://www.ag-grid.com/charts/react/$1/" [R=301,L]
    RewriteRule "^vue-charts/vue/bullet-series/?$" "https://www.ag-grid.com/charts/vue/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^vue-charts/vue/fonts/?$" "https://www.ag-grid.com/charts/vue/text/" [R=301,L]
    RewriteRule "^vue-charts/vue/series(/.*)?$" "https://www.ag-grid.com/charts/vue/bar-series/" [R=301,L]
    RewriteRule "^vue-charts/vue/axes(/.*)?$" "https://www.ag-grid.com/charts/vue/axes-configuration/" [R=301,L]
    RewriteRule "^vue-charts/vue/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/vue/$1" [R=301,L]
    RewriteRule "^vue-charts/vue/(.+?)/?$" "https://www.ag-grid.com/charts/vue/$1/" [R=301,L]
    RewriteRule "^enterprise-charts/react/bullet-series/?$" "https://www.ag-grid.com/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^enterprise-charts/react/fonts/?$" "https://www.ag-grid.com/charts/react/text/" [R=301,L]
    RewriteRule "^enterprise-charts/react/toolbar/?$" "https://www.ag-grid.com/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^enterprise-charts/react/line/?$" "https://www.ag-grid.com/charts/react/line-series/" [R=301,L]
    RewriteRule "^enterprise-charts/react/series(/.*)?$" "https://www.ag-grid.com/charts/react/bar-series/" [R=301,L]
    RewriteRule "^enterprise-charts/react/axes(/.*)?$" "https://www.ag-grid.com/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^enterprise-charts/react/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/react/$1" [R=301,L]
    RewriteRule "^enterprise-charts/react/(.+?)/?$" "https://www.ag-grid.com/charts/react/$1/" [R=301,L]
    RewriteRule "^[a-z]+-charts/gallery(/.*)?$" "https://www.ag-grid.com/charts/gallery/" [R=301,L]
    RewriteRule "^[a-z]+-charts/options(/.*)?$" "https://www.ag-grid.com/charts/options/" [R=301,L]
    RewriteRule "^enterprise-charts/(?!index\\.html$).+$" "https://www.ag-grid.com/charts/enterprise-charts/" [R=301,L]
    RewriteRule "^(?:core|side)/?$" "https://www.ag-grid.com/charts/javascript/quick-start/" [R=301,L]
    RewriteRule "^core/bullet-series/?$" "https://www.ag-grid.com/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^core/fonts/?$" "https://www.ag-grid.com/charts/javascript/text/" [R=301,L]
    RewriteRule "^core/toolbar/?$" "https://www.ag-grid.com/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^core/series(/.*)?$" "https://www.ag-grid.com/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^core/axes(/.*)?$" "https://www.ag-grid.com/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^core/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/javascript/$1" [R=301,L]
    RewriteRule "^core/(.+?)/?$" "https://www.ag-grid.com/charts/javascript/$1/" [R=301,L]
    RewriteRule "^side/bullet-series/?$" "https://www.ag-grid.com/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^side/fonts/?$" "https://www.ag-grid.com/charts/javascript/text/" [R=301,L]
    RewriteRule "^side/toolbar/?$" "https://www.ag-grid.com/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^side/series(/.*)?$" "https://www.ag-grid.com/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^side/axes(/.*)?$" "https://www.ag-grid.com/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^side/(.*\\.[^/]*)$" "https://www.ag-grid.com/charts/javascript/$1" [R=301,L]
    RewriteRule "^side/(.+?)/?$" "https://www.ag-grid.com/charts/javascript/$1/" [R=301,L]
    RewriteRule "^server-side-rendering(/.*)?$" "https://www.ag-grid.com/charts/javascript/server-side-rendering/" [R=301,L]
    RewriteRule "^react/series(/.*)?$" "https://www.ag-grid.com/charts/react/bar-series/" [R=301,L]
    RewriteRule "^angular/series(/.*)?$" "https://www.ag-grid.com/charts/angular/bar-series/" [R=301,L]
    RewriteRule "^vue/series(/.*)?$" "https://www.ag-grid.com/charts/vue/bar-series/" [R=301,L]
    RewriteRule "^javascript/series(/.*)?$" "https://www.ag-grid.com/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^react/axes(/.*)?$" "https://www.ag-grid.com/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^angular/axes(/.*)?$" "https://www.ag-grid.com/charts/angular/axes-configuration/" [R=301,L]
    RewriteRule "^vue/axes(/.*)?$" "https://www.ag-grid.com/charts/vue/axes-configuration/" [R=301,L]
    RewriteRule "^javascript/axes(/.*)?$" "https://www.ag-grid.com/charts/javascript/axes-configuration/" [R=301,L]

    # Without this, mod_rewrite skips the base directory's own slash-less URL and leaves it to
    # mod_dir, whose slash redirect stays on the requesting host - a second hop from any other host.
    RewriteOptions AllowNoSlash

    # Every slash-less path goes straight to its slashed canonical URL, as on the grid root, rather
    # than via mod_dir's slash redirect on the requesting host. That holds whether or not the path
    # is a page: one that is not then 404s at the slashed URL. The exception is a path whose last
    # segment has a dot, taken for a file unless it is a real directory (an archive version such as
    # 14.2.0).
    RewriteCond %{HTTP_HOST} ^www\\.ag-grid\\.com$ [NC,OR]
    RewriteCond %{HTTP_HOST} ^(?:ag-grid\\.com|(?:blog|angulargrid|angular-grid|javascript-grid|react-grid)\\.ag-grid\\.com|(?:www\\.)?angulargrid\\.com)$ [NC]
    RewriteCond %{REQUEST_URI} /+[^.]+$ [OR]
    RewriteCond %{REQUEST_FILENAME} -d
    RewriteCond %{REQUEST_URI} [^/]$
    # Not below an archive: one deployed without rewrite rules of its own runs these instead, and
    # its own redirects must see the URL as requested.
    RewriteCond %{REQUEST_URI} !^/charts/archive/
    RewriteRule ^ https://www.ag-grid.com%{REQUEST_URI}/ [R=301,L]

    # Canonical host is www.ag-grid.com; no other host may serve pages directly.
    RewriteCond %{HTTP_HOST} ^(?:ag-grid\\.com|(?:blog|angulargrid|angular-grid|javascript-grid|react-grid)\\.ag-grid\\.com|(?:www\\.)?angulargrid\\.com)$ [NC]
    RewriteRule ^ https://www.ag-grid.com%{REQUEST_URI} [R=301,L]
</IfModule>"
`;

exports[`generated redirect rules snapshot > staging .htaccess is unchanged 1`] = `
"### AUTOGENERATED DO NOT EDIT
ErrorDocument 404 /charts/404.html

# add MIME types for serving example files
AddType text/javascript mjs ts jsx

# Apache has no built-in .webp type, so without this the images are served with no Content-Type.
AddType image/webp .webp

# serve the per-page LLM markdown files as markdown
AddType text/markdown md
# ...as UTF-8, so glyphs like ✓/✗ in generated tables aren't mojibaked by a
# Latin-1 fallback (the .md endpoint sets this charset; static hosting must too).
AddCharset utf-8 .md

# Content-Security-Policy — path-scoped. Charts is served from /charts on www.ag-grid.com
# and inherits the grid root CSP, so this block overrides it for charts pages (see
# getCspHtaccessBlock). Ordinary pages get the tightened policy (no 'unsafe-eval'); the
# <If> override re-allows it for example-runner documents. The trial-form origin is
# env-split, so the policy is generated per environment.
# Override the CSP inherited from the grid root for /charts pages.
Header always unset Content-Security-Policy
Header always unset Content-Security-Policy-Report-Only
Header always set Content-Security-Policy "default-src 'self'; script-src 'self' https://*.ag-grid.com https://plausible.io https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://esm.sh https://js.zi-scripts.com https://*.zoominfo.com https://snap.licdn.com https://googleads.g.doubleclick.net https://www.google.com https://www.gstatic.com https://www.youtube.com https://cdn.cookielaw.org https://app.enzuzo.com blob: 'wasm-unsafe-eval' 'sha256-5yA1hhuz+tEuYcMxZ8ZGwNFlGOTnPuOk3MMRs7fYXmY=' 'sha256-yyPoC+PtF+Rve9JwzJ4PTIiap268jewQfmi4/JViA6I=' 'sha256-2FkRaRTcR5gCsv4n2zqqqLpAuXDH81zr4eNak8Aw5QA=' 'sha256-V9qR5YoG9UXRYIHiPULjYjKYPy3t6rsOFgm0VUI5TzE=' 'sha256-QzWFZi+FLIx23tnm9SBU4aEgx4x8DsuASP07mfqol/c=' 'sha256-eIXWvAmxkr251LJZkjniEK5LcPF3NkapbJepohwYRIc=' 'sha256-Q2BPg90ZMplYY+FSdApNErhpWafg2hcRRbndmvxuL/Q=' 'sha256-BF0290pkb3jxQsE7z00xR8Imp8X34FLC88L0lkMnrGw=' 'sha256-Ya0pUYrC7nM5Cn/056TyVuEiz6dFGrzmkWzgON0pF0U=' 'sha256-41l+jvtOjBgKy9345IStB4j1gGPGFMVXADMHn1Acs6E=' 'sha256-NSYHvOQXo5WNxDt0/+l9AbSTx6N4CkkrbuSSa6ERhlo=' 'sha256-UZ79CQlmQa9u4xp1a60kP2//w3o9IvBsC2tdqv57moc=' 'sha256-7f34QP24yF/YC+G6zSHRCBZrBez6xFf6GbcGIXkZ4K0=' 'sha256-7slCn/usH14D/QjSBhHPAkSInIZY56XqT8LTtYE71U8=' 'sha256-D3cdipua6lhS2IQ0W0AlSNVVsS+2b/sXycSE8m8PkxY=' 'sha256-nC2/ZWBpMyJEdVw5YxKBKxSMNwMN/lOAPrHk4RcIBbc=' 'sha256-mEEBV2lFpiAmDNE5KUyh96GfbHxzY6fQyivqgFN8qok=' 'sha256-I3QGV+JbPLDPH/LSfCc18uFddKqpiYEYRrrBUdnCC2Q='; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com data:; img-src 'self' data: blob: https:; connect-src 'self' data: https://*.ag-grid.com https://plausible.io https://*.algolia.net https://*.algolianet.com https://*.google-analytics.com https://*.analytics.google.com https://analytics.google.com https://stats.g.doubleclick.net https://www.googletagmanager.com https://cdn.jsdelivr.net https://esm.sh https://js.zi-scripts.com https://*.zoominfo.com https://px.ads.linkedin.com https://www.google.com https://www.googleadservices.com https://pagead2.googlesyndication.com https://ad.doubleclick.net https://cdn.cookielaw.org https://*.onetrust.com https://app.enzuzo.com https://gvl.enzuzo.com https://hook.eu2.make.com https://ingress.eu-west-1.aws.dash0.com https://us-central1-stripe-testing-19784.cloudfunctions.net; frame-src 'self' data: https://www.googletagmanager.com https://www.youtube.com https://www.google.com; media-src 'self' data: blob: https:; worker-src 'self' blob:; object-src 'none'; base-uri 'self'; form-action 'self' https://us-central1-stripe-testing-19784.cloudfunctions.net https://test.salesforce.com https://codesandbox.io https://plnkr.co https://ag-grid.us11.list-manage.com; frame-ancestors 'self' https://*.ag-grid.com"

# Example-runner documents and archived doc versions additionally need 'unsafe-eval'
# (the Angular JIT compiler and the Plunker transpiler compile in the browser;
# archived versions additionally eval-load modules with SystemJS).
# <If> sections merge after all other configuration, so this unset+set replaces the
# header set above for matching requests.
<If "%{REQUEST_URI} =~ m#/(examples/[^/?]|archive/)#">
    Header always unset Content-Security-Policy
    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' https://*.ag-grid.com https://plausible.io https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://esm.sh https://js.zi-scripts.com https://*.zoominfo.com https://snap.licdn.com https://googleads.g.doubleclick.net https://www.google.com https://www.gstatic.com https://www.youtube.com https://cdn.cookielaw.org https://app.enzuzo.com blob: 'wasm-unsafe-eval' 'unsafe-eval' 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com data:; img-src 'self' data: blob: https:; connect-src 'self' data: https://*.ag-grid.com https://plausible.io https://*.algolia.net https://*.algolianet.com https://*.google-analytics.com https://*.analytics.google.com https://analytics.google.com https://stats.g.doubleclick.net https://www.googletagmanager.com https://cdn.jsdelivr.net https://esm.sh https://js.zi-scripts.com https://*.zoominfo.com https://px.ads.linkedin.com https://www.google.com https://www.googleadservices.com https://pagead2.googlesyndication.com https://ad.doubleclick.net https://cdn.cookielaw.org https://*.onetrust.com https://app.enzuzo.com https://gvl.enzuzo.com https://hook.eu2.make.com https://ingress.eu-west-1.aws.dash0.com https://us-central1-stripe-testing-19784.cloudfunctions.net; frame-src 'self' data: https://www.googletagmanager.com https://www.youtube.com https://www.google.com; media-src 'self' data: blob: https:; worker-src 'self' blob:; object-src 'none'; base-uri 'self'; form-action 'self' https://us-central1-stripe-testing-19784.cloudfunctions.net https://test.salesforce.com https://codesandbox.io https://plnkr.co https://ag-grid.us11.list-manage.com; frame-ancestors 'self' https://*.ag-grid.com"
</If>

<IfModule mod_rewrite.c>
    RewriteEngine On

    RewriteRule "^javascript/bullet-series/?$" "/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^angular/bullet-series/?$" "/charts/angular/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^react/bullet-series/?$" "/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^vue/bullet-series/?$" "/charts/vue/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^javascript/fonts/?$" "/charts/javascript/text/" [R=301,L]
    RewriteRule "^angular/fonts/?$" "/charts/angular/text/" [R=301,L]
    RewriteRule "^react/fonts/?$" "/charts/react/text/" [R=301,L]
    RewriteRule "^vue/fonts/?$" "/charts/vue/text/" [R=301,L]
    RewriteRule "^javascript/?$" "/charts/javascript/quick-start/" [R=301,L]
    RewriteRule "^javascript/toolbar/?$" "/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react/toolbar/?$" "/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react/line/?$" "/charts/react/line-series/" [R=301,L]
    RewriteRule "^sitemap\\.xml/?$" "/charts/sitemap-0.xml" [R=301,L]
    RewriteRule "^archive/?$" "/charts/documentation-archive/" [R=301,L]
    RewriteRule "^privacy(/.*)?$" - [G]
    RewriteRule "^javascript-charts/javascript/bullet-series/?$" "/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^javascript-charts/javascript/fonts/?$" "/charts/javascript/text/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/toolbar/?$" "/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/series(/.*)?$" "/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/axes(/.*)?$" "/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^javascript-charts/javascript/(.*\\.[^/]*)$" "/charts/javascript/$1" [R=301,L]
    RewriteRule "^javascript-charts/javascript/(.+?)/?$" "/charts/javascript/$1/" [R=301,L]
    RewriteRule "^angular-charts/angular/bullet-series/?$" "/charts/angular/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^angular-charts/angular/fonts/?$" "/charts/angular/text/" [R=301,L]
    RewriteRule "^angular-charts/angular/series(/.*)?$" "/charts/angular/bar-series/" [R=301,L]
    RewriteRule "^angular-charts/angular/axes(/.*)?$" "/charts/angular/axes-configuration/" [R=301,L]
    RewriteRule "^angular-charts/angular/(.*\\.[^/]*)$" "/charts/angular/$1" [R=301,L]
    RewriteRule "^angular-charts/angular/(.+?)/?$" "/charts/angular/$1/" [R=301,L]
    RewriteRule "^react-charts/react/bullet-series/?$" "/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^react-charts/react/fonts/?$" "/charts/react/text/" [R=301,L]
    RewriteRule "^react-charts/react/toolbar/?$" "/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^react-charts/react/line/?$" "/charts/react/line-series/" [R=301,L]
    RewriteRule "^react-charts/react/series(/.*)?$" "/charts/react/bar-series/" [R=301,L]
    RewriteRule "^react-charts/react/axes(/.*)?$" "/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^react-charts/react/(.*\\.[^/]*)$" "/charts/react/$1" [R=301,L]
    RewriteRule "^react-charts/react/(.+?)/?$" "/charts/react/$1/" [R=301,L]
    RewriteRule "^vue-charts/vue/bullet-series/?$" "/charts/vue/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^vue-charts/vue/fonts/?$" "/charts/vue/text/" [R=301,L]
    RewriteRule "^vue-charts/vue/series(/.*)?$" "/charts/vue/bar-series/" [R=301,L]
    RewriteRule "^vue-charts/vue/axes(/.*)?$" "/charts/vue/axes-configuration/" [R=301,L]
    RewriteRule "^vue-charts/vue/(.*\\.[^/]*)$" "/charts/vue/$1" [R=301,L]
    RewriteRule "^vue-charts/vue/(.+?)/?$" "/charts/vue/$1/" [R=301,L]
    RewriteRule "^enterprise-charts/react/bullet-series/?$" "/charts/react/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^enterprise-charts/react/fonts/?$" "/charts/react/text/" [R=301,L]
    RewriteRule "^enterprise-charts/react/toolbar/?$" "/charts/react/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^enterprise-charts/react/line/?$" "/charts/react/line-series/" [R=301,L]
    RewriteRule "^enterprise-charts/react/series(/.*)?$" "/charts/react/bar-series/" [R=301,L]
    RewriteRule "^enterprise-charts/react/axes(/.*)?$" "/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^enterprise-charts/react/(.*\\.[^/]*)$" "/charts/react/$1" [R=301,L]
    RewriteRule "^enterprise-charts/react/(.+?)/?$" "/charts/react/$1/" [R=301,L]
    RewriteRule "^[a-z]+-charts/gallery(/.*)?$" "/charts/gallery/" [R=301,L]
    RewriteRule "^[a-z]+-charts/options(/.*)?$" "/charts/options/" [R=301,L]
    RewriteRule "^enterprise-charts/(?!index\\.html$).+$" "/charts/enterprise-charts/" [R=301,L]
    RewriteRule "^(?:core|side)/?$" "/charts/javascript/quick-start/" [R=301,L]
    RewriteRule "^core/bullet-series/?$" "/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^core/fonts/?$" "/charts/javascript/text/" [R=301,L]
    RewriteRule "^core/toolbar/?$" "/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^core/series(/.*)?$" "/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^core/axes(/.*)?$" "/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^core/(.*\\.[^/]*)$" "/charts/javascript/$1" [R=301,L]
    RewriteRule "^core/(.+?)/?$" "/charts/javascript/$1/" [R=301,L]
    RewriteRule "^side/bullet-series/?$" "/charts/javascript/linear-gauge/#bullet-series" [R=301,NE,L]
    RewriteRule "^side/fonts/?$" "/charts/javascript/text/" [R=301,L]
    RewriteRule "^side/toolbar/?$" "/charts/javascript/financial-charts-toolbar/" [R=301,L]
    RewriteRule "^side/series(/.*)?$" "/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^side/axes(/.*)?$" "/charts/javascript/axes-configuration/" [R=301,L]
    RewriteRule "^side/(.*\\.[^/]*)$" "/charts/javascript/$1" [R=301,L]
    RewriteRule "^side/(.+?)/?$" "/charts/javascript/$1/" [R=301,L]
    RewriteRule "^server-side-rendering(/.*)?$" "/charts/javascript/server-side-rendering/" [R=301,L]
    RewriteRule "^react/series(/.*)?$" "/charts/react/bar-series/" [R=301,L]
    RewriteRule "^angular/series(/.*)?$" "/charts/angular/bar-series/" [R=301,L]
    RewriteRule "^vue/series(/.*)?$" "/charts/vue/bar-series/" [R=301,L]
    RewriteRule "^javascript/series(/.*)?$" "/charts/javascript/bar-series/" [R=301,L]
    RewriteRule "^react/axes(/.*)?$" "/charts/react/axes-configuration/" [R=301,L]
    RewriteRule "^angular/axes(/.*)?$" "/charts/angular/axes-configuration/" [R=301,L]
    RewriteRule "^vue/axes(/.*)?$" "/charts/vue/axes-configuration/" [R=301,L]
    RewriteRule "^javascript/axes(/.*)?$" "/charts/javascript/axes-configuration/" [R=301,L]
</IfModule>

<IfModule mod_rewrite.c>
    RewriteEngine On

    RewriteCond %{HTTP_ACCEPT} text/markdown
    RewriteCond %{REQUEST_URI} ^/(charts/(?:(?:react|angular|vue|javascript)/[^/.]+|(?:react|angular|vue)|changelog|contact|documentation-archive|license-pricing|pipeline|roadmap|sitemap|whats-new|community(?:/(?:beyond-the-prompt|events|media|showcase|tools-extensions))?|session/[^/.]+|examples(?:-[^/.]+)?|gallery(?:/[^/.]+)?|(?:angular|enterprise|javascript|react|vue)-charts|options(?:/(?:axes|series|initialState/annotations|navigator/miniChart/series)/[^/.]+)?|themes-api(?:/overrides/[^/.]+)?))/?$
    RewriteCond %{DOCUMENT_ROOT}/%1.md -f
    RewriteRule ^ /%1.md [L]

    # The homepage twin (/charts/ -> /charts/index.md). Handled separately because the
    # site root has no path segment to capture in %1; the pattern matches only the base root.
    RewriteCond %{HTTP_ACCEPT} text/markdown
    RewriteCond %{REQUEST_URI} ^/charts/?$
    RewriteCond %{DOCUMENT_ROOT}/charts/index.md -f
    RewriteRule ^ /charts/index.md [L]
</IfModule>

# Docs pages content-negotiate on Accept (see the markdown rewrite), so shared caches must
# key on it. Scoped to the negotiated paths (incl. the homepage) so the rest of the site keeps
# its default.
<If "%{REQUEST_URI} =~ m#^/charts/(?:(?:react|angular|vue|javascript)/[^/.]+|(?:react|angular|vue)|changelog|contact|documentation-archive|license-pricing|pipeline|roadmap|sitemap|whats-new|community(?:/(?:beyond-the-prompt|events|media|showcase|tools-extensions))?|session/[^/.]+|examples(?:-[^/.]+)?|gallery(?:/[^/.]+)?|(?:angular|enterprise|javascript|react|vue)-charts|options(?:/(?:axes|series|initialState/annotations|navigator/miniChart/series)/[^/.]+)?|themes-api(?:/overrides/[^/.]+)?)(?:/|/index\\.html)?$# || %{REQUEST_URI} =~ m#^/charts(?:/|/index\\.html)?$#">
    Header append Vary Accept
</If>

Options -Indexes
"
`;
